# Py_WEB_HW_8

./: config.ini  connect.py  models.py  pyproject.toml  query.py  seed.py
part_2/: config.ini  connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py  pyproject.toml  seed.py
