[tool.poetry]
name = "py-web-hw-8"
version = "0.1.0"
description = ""
authors = ["Oleksii Latypov <oleksii.latypov.la@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
faker = "^17.6.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
